<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_float_window"
        android:title="@string/enable_float_window"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="boot_completed"
        android:title="@string/boot_completed"/>

    <ListPreference
        android:defaultValue="@string/default_gesture_click_value"
        android:entries="@array/gesture_entries"
        android:entryValues="@array/gesture_values"
        android:key="gesture_click"
        android:summary="@string/gesture_click_label"
        android:title="@string/gesture_click"/>

    <ListPreference
        android:defaultValue="@string/default_gesture_long_press_value"
        android:entries="@array/gesture_entries"
        android:entryValues="@array/gesture_values"
        android:key="gesture_long_press"
        android:summary="@string/gesture_long_press_label"
        android:title="@string/gesture_long_press"/>

    <Preference
        android:key="reset_setup_wizard"
        android:title="@string/reset_setup_wizard"/>

    <Preference
        android:key="about"
        android:title="@string/about"/>
</PreferenceScreen>